# auto-play

./: .gitignore  README.md  pyproject.toml  recordDependences.txt  requirements.txt
autoplay/: dnf.py
autoplay/utils/: index.py  predict.py  screen_capture.py  tansformer_image.py
docker/: Dockerfile  nginx.conf
utils/: get_screen_to_stream.py
